addded support if expected directory did not exist.

--- a/env/user_setup.rc
+++ b/env/user_setup.rc
@@ -34,28 +34,32 @@ funCreateCdsLib(){
 		echo "*** INFO: User library file exists --> $dir/cds/run/cds.lib";
 		echo "Please verify this file is correct";
 	else
-		echo "Creating control libraries --> $dir/cds/run/cds.lib";
+		if [ -d "$dir/cds/run" ]; then
+			echo "Creating control libraries --> $dir/cds/run/cds.lib";
 
-		#******* add required libraries to the cds.lib ***********
-		echo "#******* Include all SOS control libraries ***********" > $dir/cds/run/cds.lib
-		echo "INCLUDE $dir/cds/run/sos.lib" >> $dir/cds/run/cds.lib
-		echo "" >> $dir/cds/run/cds.lib
-
-		echo "#******* add required libraries to the cds.lib ***********" >> $dir/cds/run/cds.lib
-		echo "DEFINE opticalLib $CADENCE_DIR/$CDSBASE/tools.lnx86/dfII/etc/cdslib/opticalLib" >> $dir/cds/run/cds.lib
-		echo "DEFINE analogLib  $CADENCE_DIR/$CDSBASE/tools.lnx86/dfII/etc/cdslib/artist/analogLib" >> $dir/cds/run/cds.lib
-		echo "DEFINE basic      $CADENCE_DIR/$CDSBASE/tools.lnx86/dfII/etc/cdslib/basic" >> $dir/cds/run/cds.lib
-		echo "" >> $dir/cds/run/cds.lib
-		if [ $chip_type == "pic" ];	then
-			#foundry database 
-			echo "#******* foundry database ***********" >> $dir/cds/run/cds.lib
-			echo "DEFINE $FOUNDRY_PIC"_"$PROCESS_PIC"_"$TF_REV_PIC  /bos/foundry/$FOUNDRY_PIC/$PROCESS_PIC/$TF_REV_PIC/cds/oa" >> $dir/cds/run/cds.lib
+			#******* add required libraries to the cds.lib ***********
+			echo "#******* Include all SOS control libraries ***********" > $dir/cds/run/cds.lib
+			echo "INCLUDE $dir/cds/run/sos.lib" >> $dir/cds/run/cds.lib
 			echo "" >> $dir/cds/run/cds.lib
 
-			#pic-pdk database 
-			echo "#******* pic-pdk database ***********" >> $dir/cds/run/cds.lib
-			echo "INCLUDE  /bos/pic_pdk/$FOUNDRY_PIC/$PROCESS_PIC/$LTPDK_REV_PIC/cds/oa/cds.lib" >> $dir/cds/run/cds.lib
+			echo "#******* add required libraries to the cds.lib ***********" >> $dir/cds/run/cds.lib
+			echo "DEFINE opticalLib $CADENCE_DIR/$CDSBASE/tools.lnx86/dfII/etc/cdslib/opticalLib" >> $dir/cds/run/cds.lib
+			echo "DEFINE analogLib  $CADENCE_DIR/$CDSBASE/tools.lnx86/dfII/etc/cdslib/artist/analogLib" >> $dir/cds/run/cds.lib
+			echo "DEFINE basic      $CADENCE_DIR/$CDSBASE/tools.lnx86/dfII/etc/cdslib/basic" >> $dir/cds/run/cds.lib
 			echo "" >> $dir/cds/run/cds.lib
+			if [ $chip_type == "pic" ];	then
+				#foundry database 
+				echo "#******* foundry database ***********" >> $dir/cds/run/cds.lib
+				echo "DEFINE $FOUNDRY_PIC"_"$PROCESS_PIC"_"$TF_REV_PIC  /bos/foundry/$FOUNDRY_PIC/$PROCESS_PIC/$TF_REV_PIC/cds/oa" >> $dir/cds/run/cds.lib
+				echo "" >> $dir/cds/run/cds.lib
+
+				#pic-pdk database 
+				echo "#******* pic-pdk database ***********" >> $dir/cds/run/cds.lib
+				echo "INCLUDE  /bos/pic_pdk/$FOUNDRY_PIC/$PROCESS_PIC/$LTPDK_REV_PIC/cds/oa/cds.lib" >> $dir/cds/run/cds.lib
+				echo "" >> $dir/cds/run/cds.lib
+			fi
+		else
+			echo "*** WARN: CDS run area does not exist--> $dir/cds/run";
 		fi
 	fi
 
