--- a/env/user_setup.rc
+++ b/env/user_setup.rc
@@ -117,9 +117,9 @@ let( (bindKeyFileList file path saveSkillPath)
 " > $dir/cds/run/.cdsinit
 if [ $chip_type == "pic" ];	then
 echo " 
-	info(\"Loading calibre cdsinit from *** /data/tools/mentor/calibre.cdsinit *** ....\n\" )
-	loadi(\"/data/tools/mentor/calibre.cdsinit\")
-	info(\"Completed loading calibre cdsinit from *** /data/tools/mentor/calibre.cdsinit *** ....\n\" )">> $dir/cds/run/.cdsinit 
+	info(\"Loading calibre cdsinit from *** /nfs/dv/git_repos/mentor/calibre.cdsinit *** ....\n\" )
+	loadi(\"/nfs/dv/git_repos/mentor/calibre.cdsinit\")
+	info(\"Completed loading calibre cdsinit from *** /nfs/dv/git_repos/mentor/calibre.cdsinit *** ....\n\" )">> $dir/cds/run/.cdsinit 
 fi
 echo "
 info(\"\tCompleted loading PROJECT customizations from ***%s/.cdsinit *** ....\n\" pwd())
@@ -236,15 +236,15 @@ fi
 ## Find the module for the inputted project/rev and load it. ##
 ## if it does not exist warn and list avaible projects/revs  ##
 ###############################################################
-	if [ ! -d "/data/tools/EDA/projects/$project" ]; then
+	if [ ! -d "/nfs/dv/git_repos/EDA/projects/$project" ]; then
     	echo ""
     	echo " *** ERROR: Unknown project $project, make sure that the module exists for the project!"
 		echo "Available projects:"
-		ls /data/tools/EDA/projects
+		ls /nfs/dv/git_repos/EDA/projects
     	kill -INT $$;
 	fi
 	if [ ! -z "$chip_rev" ]; then
-		if [ -f "/data/tools/EDA/projects/$project/$chip_rev" ]; then
+		if [ -f "/nfs/dv/git_repos/EDA/projects/$project/$chip_rev" ]; then
 			echo "" 
 			echo "Executing --> module load $project/$chip_rev"
 			module load $project/$chip_rev
@@ -315,7 +315,7 @@ fi
 ###############################################################
 ## module load the process module for this chip type         ##
 ###############################################################
-	if [ ! -d "/data/tools/EDA/flows/$mod" ]; then
+	if [ ! -d "/nfs/dv/git_repos/EDA/flows/$mod" ]; then
 		echo " * WARN: Module $mod does not exist!"
 	else
 		echo ""
